--- a/index.html
+++ b/index.html
@@ -56,51 +56,51 @@
                         <ion-icon name="search" class="text-2xl text-white"></ion-icon>
                     </a>
                 </div>
-                <ul class="menu flex flex-col lg:flex-row lg:justify-center lg:items-center md:h-full">
+                <ul class="menu flex flex-col md:gap-12 lg:flex-row lg:justify-center lg:items-center md:h-full">
                     <li class="md:h-full h-22 ">
-                        <a class="text-yellow-300 text-sm font-bold h-full w-[120px] text-center flex items-center md:justify-center md:hover:text-gray-200"
+                        <a class="text-yellow-300 text-sm font-bold h-full text-center flex items-center md:justify-center md:hover:text-gray-200"
                             href="">
                             XỔ SỐ
                         </a>
                     </li>
                     <li class="md:h-full">
-                        <a class="text-yellow-300 text-sm font-bold h-full w-[120px] text-center flex items-center md:justify-center md:hover:text-gray-200"
+                        <a class="text-yellow-300 text-sm font-bold h-full text-center flex items-center md:justify-center md:hover:text-gray-200"
                             href="">
                             HƯỚNG DẪN
                         </a>
                     </li>
                     <li class="md:h-full">
-                        <a class="text-yellow-300 text-sm font-bold h-full w-[120px] text-center flex items-center md:justify-center md:hover:text-gray-200"
+                        <a class="text-yellow-300 text-sm font-bold h-full text-center flex items-center md:justify-center md:hover:text-gray-200"
                             href="">
                             KHUYẾN MÃI
                         </a>
                     </li>
                     <li class="md:h-full">
-                        <a class="text-yellow-300 text-sm font-bold h-full w-[120px] text-center flex items-center md:justify-center md:hover:text-gray-200"
+                        <a class="text-yellow-300 text-sm font-bold h-full text-center flex items-center md:justify-center md:hover:text-gray-200"
                             href="">
                             CASINO
                         </a>
                     </li>
                     <li class="md:h-full">
-                        <a class="text-yellow-300 text-sm font-bold h-full w-[120px] text-center flex items-center md:justify-center md:hover:text-gray-200"
+                        <a class="text-yellow-300 text-sm font-bold h-full text-center flex items-center md:justify-center md:hover:text-gray-200"
                             href="">
                             THỂ THAO
                         </a>
                     </li class="md:h-full">
                     <li class="md:h-full">
-                        <a class="text-yellow-300 text-sm font-bold h-full w-[120px] text-center flex items-center md:justify-center md:hover:text-gray-200"
+                        <a class="text-yellow-300 text-sm font-bold h-full text-center flex items-center md:justify-center md:hover:text-gray-200"
                             href="">
                             GIẢI MÃ GIẤC MƠ
                         </a>
                     </li>
                     <li class="md:h-full">
-                        <a class="text-yellow-300 text-sm font-bold h-full w-[120px] text-center flex items-center md:justify-center md:hover:text-gray-200"
+                        <a class="text-yellow-300 text-sm font-bold h-full text-center flex items-center md:justify-center md:hover:text-gray-200"
                             href="">
                             BẮN CÁ
                         </a>
                     </li>
                     <li class="md:h-full">
-                        <a class="text-yellow-300 text-sm font-bold h-full w-[120px] text-center flex items-center md:justify-center md:hover:text-gray-200"
+                        <a class="text-yellow-300 text-sm font-bold h-full text-center flex items-center md:justify-center md:hover:text-gray-200"
                             href="">
                             TIN TỨC
                         </a>
@@ -142,7 +142,7 @@
                 </h3>
                 <div class="red-line w-[20%] md:w-[30%] h-[3px] bg-red-700"></div>
             </div>
-            
+
             <div class="sixgame w-full mt-10 grid grid-cols-3 lg:grid-cols-6 gap-4">
                 <a href="https://hay88pro-nohu.vercel.app/">
                     <div class="poster1 relative flex justify-center hover:scale-105 transition-all group">
